--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
+    "expo-secure-store": "^10.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
